--- a/AcmeProductManagement/css/app.css
+++ b/AcmeProductManagement/css/app.css
@@ -1,12 +1,10 @@
-﻿body {
-    background-color: #C6D9F1;
-}
+﻿
 form {
     background-color: #A4C8E8;
     border-radius: 2px;
     box-shadow: 0 1px 1px #ccc;
     color: #404040;
-    font-size: 16px;
+    font-size: 20px;
     padding: 30px 20px;
 }
 form legend {
